...
    // On page load action.
    SchedulerBinding.instance.addPostFrameCallback((_) async {
      logFirebaseEvent('PLANT_SEARCH_PlantSearch_ON_INIT_STATE');
      logFirebaseEvent('PlantSearch_set_form_field');
      safeSetState(() {
        _model.dropdownMenuModel.dropDownValueController?.value =
            'Plant Search';
      });
    });

    _model.searchBarTextController ??= TextEditingController();
    _model.searchBarFocusNode ??= FocusNode();

...
                      ),
                    Row(
                      mainAxisSize: MainAxisSize.max,
                      children: [
                        Expanded(
                          child: TextFormField(
                            key: const ValueKey('SearchBar_nvwl'),
                            controller: _model.searchBarTextController,
                            focusNode: _model.searchBarFocusNode,
                            onFieldSubmitted: (_) async {
                              logFirebaseEvent(
                                  'PLANT_SEARCH_SearchBar_ON_TEXTFIELD_SUBM');
                              logFirebaseEvent('SearchBar_action_block');
...
                        Opacity(
                          opacity: valueOrDefault<double>(
                            _model.showCameraWidgets ? 0.8 : 1.0,
                            1.0,
                          ),
                          child: FlutterFlowIconButton(
                            key: const ValueKey('IconButton_esn9'),
                            borderRadius: 8.0,
                            buttonSize: 50.0,
                            fillColor: const Color(0xFFB1D7BE),
                            icon: Icon(
                              Icons.camera_alt,
                              color: FlutterFlowTheme.of(context).primaryText,
...
                                    Opacity(
                                      opacity: valueOrDefault<double>(
                                        !_model.fromImage ? 0.8 : 1.0,
                                        1.0,
                                      ),
                                      child: FFButtonWidget(
                                        key: const ValueKey('Button_lohe'),
                                        onPressed: () async {
                                          logFirebaseEvent(
                                              'PLANT_SEARCH_FROM_IMAGE_U_R_L_BTN_ON_TAP');
                                          logFirebaseEvent(
                                              'Button_update_page_state');
                                          _model.fromImage = false;
...
                                    Row(
                                      mainAxisSize: MainAxisSize.max,
                                      children: [
                                        SizedBox(
                                          width: 160.0,
                                          child: TextFormField(
                                            key: const ValueKey('ImageURL_a4rt'),
                                            controller:
                                                _model.imageURLTextController,
                                            focusNode: _model.imageURLFocusNode,
                                            autofocus: false,
                                            obscureText: false,
                                            decoration: InputDecoration(
...
                                            validator: _model
                                                .imageURLTextControllerValidator
                                                .asValidator(context),
                                          ),
                                        ),
                                        FFButtonWidget(
                                          key: const ValueKey('Button_f8eq'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'PLANT_SEARCH_PAGE_GET_NAME_BTN_ON_TAP');
                                            logFirebaseEvent(
                                                'Button_update_page_state');
                                            _model.plantURL = _model
...
