...
                                  padding: const EdgeInsets.all(12.0),
                                  tabs: const [
                                    Tab(
                                      text: 'SignUp',
                                    ),
                                    Tab(
                                      key: ValueKey('Tab_smwq'),
                                      text: 'Login',
                                    ),
                                  ],
                                  controller: _model.tabBarController,
                                  onTap: (i) async {
                                    [() async {}, () async {}][i]();
...
                                                  ),
                                                ),
                                                SizedBox(
                                                  width: double.infinity,
                                                  child: TextFormField(
                                                    key: const ValueKey(
                                                        'LoginEmailBar_p9f0'),
                                                    controller: _model
                                                        .loginEmailBarTextController,
                                                    focusNode: _model
                                                        .loginEmailBarFocusNode,
                                                    onChanged: (_) =>
                                                        EasyDebounce.debounce(
...
                                                  ),
                                                ),
                                                SizedBox(
                                                  width: double.infinity,
                                                  child: TextFormField(
                                                    key: const ValueKey(
                                                        'LoginPasswordBar_bggu'),
                                                    controller: _model
                                                        .loginPasswordBarTextController,
                                                    focusNode: _model
                                                        .loginPasswordBarFocusNode,
                                                    autofocus: false,
                                                    textInputAction:
...
                            ),
                          if (_model.tabBarCurrentIndex == 1)
                            Padding(
                              padding: const EdgeInsetsDirectional.fromSTEB(
                                  0.0, 0.0, 0.0, 20.0),
                              child: FFButtonWidget(
                                key: const ValueKey('LoginButton_11vw'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'SIGNUP_PAGE_PAGE_LoginButton_ON_TAP');
                                  logFirebaseEvent('LoginButton_validate_form');
                                  if (_model.formKey2.currentState == null ||
                                      !_model.formKey2.currentState!
...
