...
      logFirebaseEvent('MY_PLANTS_PAGE_MyPlants_ON_INIT_STATE');
      await Future.wait([
        Future(() async {
          logFirebaseEvent('MyPlants_set_form_field');
          safeSetState(() {
            _model.dropdownMenuModel.dropDownValueController?.value =
                'My Plants';
          });
          logFirebaseEvent('MyPlants_action_block');
          await _model.getMyPlants(context);
          logFirebaseEvent('MyPlants_update_page_state');
          _model.loadingMyPlants = false;
          safeSetState(() {});
...
                ),
                Row(
                  mainAxisSize: MainAxisSize.max,
                  mainAxisAlignment: MainAxisAlignment.end,
                  children: [
                    FFButtonWidget(
                      key: const ValueKey('NewPlant_zypi'),
                      onPressed: () async {
                        logFirebaseEvent('MY_PLANTS_PAGE_NewPlant_ON_TAP');
                        logFirebaseEvent('NewPlant_navigate_to');

                        context.pushNamed(
                          'PlantSearch',
...
