...
                          alignment: const AlignmentDirectional(-1.0, -1.0),
                          child: wrapWithModel(
                            model: _model.dropdownMenuModel,
                            updateCallback: () => safeSetState(() {}),
                            updateOnChange: true,
                            child: const DropdownMenuWidget(
                              key: ValueKey('dropdown_menu_sf3g'),
                              myPage: 'Home Page',
                            ),
                          ),
                        ),
                        InkWell(
                          splashColor: Colors.transparent,
...
                          alignment: const AlignmentDirectional(0.0, 0.0),
                          child: Padding(
                            padding: const EdgeInsetsDirectional.fromSTEB(
                                0.0, 70.0, 0.0, 0.0),
                            child: AuthUserStreamWidget(
                              builder: (context) => Text(
                                key: const ValueKey('Text_pybc'),
                                'Welcome, $currentUserDisplayName!',
                                style: FlutterFlowTheme.of(context)
                                    .headlineMedium
                                    .override(
                                      fontFamily: 'Inter',
                                      letterSpacing: 0.0,
...
